syntax = "proto3";

package screencapture;

option go_package = "project-phoenix/v2/pkg/service/apigateway-grpc/src/go";

service ScreenCaptureService {
    rpc SendCapture(ScreenCaptureRequest) returns (ScreenCaptureResponse) {}
}

message ScreenCaptureRequest {
  string deviceName = 1;
  string timesTamp = 2;
  string osName = 3;
  string memoryUsage = 5;
  string diskUsage = 6;
  string lastImage = 7;
  int32 messageType = 8;
}

message ScreenCaptureResponse {
    bool success = 1;
    string message = 2;
}
